Use python installation of the project

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ export SLURM_LOGS_DIR=/path/to/storage/logs
 export WARC2TEXT_DIR=/path/to/storage/warc2text_output
 export WORKSPACE=/path/to/storage/monotextor-processing
 export MONOCLEANER_MODELS=/path/to/storage/monocleaner-models
+export PYTHONUSERBASE='/projappl/project_XXXXXX/.local'
+export PATH=$PYTHONUSERBASE/bin:$PATH
+export PYTHONPATH=$PYTHONUSERBASE/lib/python3.9/site-packages:$PYTHONPATH
