Update env example with $COLLECTIONS

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,13 @@ export MONOCLEANER_MODELS=/path/to/storage/monocleaner-models
 export PYTHONUSERBASE='/projappl/project_XXXXXX/.local'
 export PATH=$PYTHONUSERBASE/bin:$PATH
 export PYTHONPATH=$PYTHONUSERBASE/lib/python3.9/site-packages:$PYTHONPATH
+W2T_SAMPLES=/scratch/project_XXXX/zaragoza/warc2text
+W2T_FULL=/scratch/project_XXXX/one/text
+declare -A COLLECTIONS=(
+    ["wide15sample12"]="$W2T_SAMPLES/output_wide15_filtered_sample12"
+    ["wide15sample2"]="$W2T_SAMPLES/output_wide15_filtered_sample12"
+    ["wide15"]="$W2T_FULL/ia/wide00015_filtered-shards"
+    ["wide16"]="$W2T_FULL/ia/wide00016-shards"
+    ["wide17"]="$W2T_FULL/ia/wide00017_filtered-shards"
+    ["cc40"]="$W2T_FULL/cc/cc40-shards"
+)
