Use flash storage partition for gnu parallel temp
Jobs with large batches as input in merge batch were running out of
memory. Probably because all the data that parallel has to buffer to
keep order of output.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ export SBATCH_ACCOUNT=project_XXXXX
 export SLURM_LOGS_DIR=/path/to/storage/logs
 export WORKSPACE=/path/to/storage/monotextor-processing
 export MONOCLEANER_MODELS=/path/to/storage/monocleaner-models
+export FLASH_TMP=/flash/project_XXXXXX/tmp
 export PYTHONUSERBASE='/projappl/project_XXXXXX/.local'
 export PATH=$PYTHONUSERBASE/bin:$PATH
 export PYTHONPATH=$PYTHONUSERBASE/lib/python3.9/site-packages:$PYTHONPATH
