--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.97"
 clap = { version = "3.1.18", features = ["derive"] }
+gaoya = "0.2.0"
+simple_lines = "0.0.1"
+zstd = "0.12.3"
+rayon = "1.5.3"
+itertools = "0.11.0"
