--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -9,9 +9,12 @@ edition = "2021"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.97"
 clap = { version = "3.1.18", features = ["derive"] }
-gaoya = "0.2.0"
+gaoya = { path = "/work/jzaragoza/monotextor-hplt/gaoya/gaoya" }
+#gaoya = "0.2.0"
 simple_lines = "0.0.1"
 zstd = "0.12.3"
 rayon = "1.5.3"
 itertools = "0.11.0"
 fnv = "1.0.7"
+log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_info"]}
+env_logger = "0.10.0"
