--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.97"
+regex = "1.9.1"
 clap = { version = "3.1.18", features = ["derive"] }
-gaoya = { path = "/work/jzaragoza/monotextor-hplt/gaoya/gaoya" }
-#gaoya = "0.2.0"
+gaoya = "0.2.0"
 simple_lines = "0.0.1"
 zstd = "0.12.3"
 rayon = "1.5.3"
