--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -18,3 +18,4 @@ itertools = "0.11.0"
 fnv = "1.0.7"
 log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_info"]}
 env_logger = "0.10.0"
+shingles = "0.1.1"
