--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -19,3 +19,4 @@ fnv = "1.0.7"
 log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_info"]}
 env_logger = "0.10.0"
 shingles = "0.1.1"
+seahash = "4.0.0"
