--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -20,3 +20,7 @@ log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_in
 env_logger = "0.10.0"
 shingles = "0.1.1"
 seahash = "4.0.0"
+
+[dev-dependencies]
+assert_cmd = "2.0.12"
+tempfile = "3.7.0"
