--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -10,7 +10,7 @@ serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.97"
 regex = "1.9.1"
 clap = { version = "3.1.18", features = ["derive"] }
-gaoya = { git = "https://github.com/ZJaume/gaoya", branch = "large_scale"}
+gaoya = { path = "../../gaoya/gaoya" }
 simple_lines = "0.0.1"
 zstd = "0.12.3"
 rayon = "1.5.3"
