--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "monotextor-utils"
-version = "0.1.0"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,4 +8,19 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.97"
+regex = "1.9.1"
 clap = { version = "3.1.18", features = ["derive"] }
+gaoya = { git = "https://github.com/ZJaume/gaoya", branch = "minhash_deduper" }
+simple_lines = "0.0.1"
+zstd = "0.12.3"
+rayon = "1.5.3"
+itertools = "0.11.0"
+fnv = "1.0.7"
+log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_info"]}
+env_logger = "0.10.0"
+shingles = "0.1.1"
+seahash = "4.0.0"
+
+[dev-dependencies]
+assert_cmd = "2.0.12"
+tempfile = "3.7.0"
