--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-orjson==3.9.15
+orjson==3.10.4
 zstandard==0.21.0
-bifixer==0.8.8
-monocleaner==1.3.0
+bifixer==0.8.9
+fasttext-wheel==0.9.2
+docscorer @ git+https://github.com/pablop16n/web-docs-scorer@8d82e020defec9e12b2d5e920ae6f30f2fb509f2
