--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -26,6 +26,7 @@ pyo3 = { version = "0", features = ["auto-initialize"] }
 fst = "0.4.7"
 regex-automata = { version = "0.1.9", features = ["transducer"] }
 memmap2 = "0.9.4"
+patricia_tree = "0.8.0"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
