--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -28,6 +28,7 @@ regex-automata = { version = "0.1.9", features = ["transducer"] }
 memmap2 = "0.9.4"
 patricia_tree = "0.8.0"
 indicatif = {version = "0.17.8", features = ["rayon"]}
+aho-corasick = "1.1.3"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
