--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -28,6 +28,7 @@ memmap2 = "0.9.4"
 patricia_tree = "0.8.0"
 indicatif = {version = "0.17.8", features = ["rayon"]}
 aho-corasick = "1.1.3"
+ahash = "0.8.12"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
