--- a/Dockerfile-webregisters
+++ b/Dockerfile-webregisters
@@ -4,5 +4,5 @@ RUN apt update -y && \
     apt install -y parallel python3 python3-pip python-is-python3 python3-venv numactl
 
 RUN pip install uv
-RUN uv pip install --system torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.0
+RUN uv pip install --system torch==2.4.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.0
 RUN uv pip install --system "transformers==4.52.3" orjson zstandard "numpy<2"
