--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -29,6 +29,8 @@ patricia_tree = "0.8.0"
 indicatif = {version = "0.17.8", features = ["rayon"]}
 aho-corasick = "1.1.3"
 ahash = "0.8.12"
+fastbloom = "0.14.0"
+parse-size = "1.1.0"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
