--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -31,6 +31,7 @@ aho-corasick = "1.1.3"
 ahash = "0.8.12"
 fastbloom = "0.14.0"
 parse-size = "1.1.0"
+fastbloom-rs = "0.5.10"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
