--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -11,7 +11,7 @@ serde_json = "1.0.97"
 regex = "1.9.1"
 clap = { version = "4.5", features = ["derive"] }
 gaoya = { git = "https://github.com/ZJaume/gaoya", branch = "minhash_deduper" }
-zstd = "0.12.3"
+zstd = { version = "0.12.3", features = ["zstdmt"] }
 rayon = "1.5.3"
 itertools = "0.11.0"
 fnv = "1.0.7"
