--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -32,6 +32,7 @@ ahash = "0.8.12"
 fastbloom = "0.14.0"
 parse-size = "1.1.0"
 fastbloom-rs = "0.5.10"
+glob = "0.3.3"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
